app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --background: #ffffff;
  --foreground: #0f172a;
}

.dark {
  --background: #020817;
  --foreground: #e5e7eb;
}

html,
body {
  height: 100%;
}

body {
  @apply bg-background text-foreground antialiased;
}

main {
  @apply min-h-screen;
}

